# ros_navigation_stack

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  ROS_NAVIGATION_STACK.sh  entrypoint.sh
src/: CMakeLists.txt  package.xml
src/cfg/: costmap_common_params.yaml  costmap_converter_params.yaml  teb_local_planner.yaml
src/cfg/known_environment/: global_costmap_params.yaml  local_costmap_params.yaml
src/cfg/unknown_environment/: global_costmap_params.yaml  local_costmap_params.yaml
src/launch/: gazebo_navigation.launch  main.launch  unknown_environment.launch
src/map/: SAMPLE_map.yaml  aws_hospital_map.yaml
src/rviz/: SAMPLE.rviz
src/urdf/: phantom.xacro
