<?xml version="1.0"?>
<package format="2">

    <name>ros_navigation_stack</name>
    <version>0.0.0</version>
    <description>ros_navigation_stack.</description>
    <maintainer email="lam@SAMPLE.io">SAMPLE</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>move_base</build_depend>
    <build_export_depend>move_base</build_export_depend>
    <exec_depend>move_base</exec_depend>

    <build_depend>actionlib</build_depend>
    <exec_depend>actionlib</exec_depend>

    <depend>tf2_ros</depend>
    <depend>costmap_2d</depend>

</package>
